src/styles.scss
/* ... */
.slide-tasks-in {
  animation: ease-out taskRight reverse 0.1s;
}
.slide-tasks-out {
  animation: ease-out taskRight 0.1s;
}
@keyframes taskRight {
  0% {
    transform: translateX(0);
  }
  100% {
    transform: translateX(120%);
  }
}
.slide-form-in {
  animation: ease-out formRight 0.1s;
}
.slide-form-out {
  animation: ease-out formRight reverse 0.1s;
}
@keyframes formRight {
  0% {
    transform: translateX(-100%);
  }
  100% {
    transform: translateX(0);
  }
}
@keyframes formVertical {
  0% {
    transform: translateY(-80%);
  }
  100% {
    transform: translateY(0);
  }
}
@keyframes formVerticall {
  0% {
    transform: translateY(20%);
  }
  100% {
    transform: translateY(0);
  }
}
@keyframes appearForm {
  0% {
    transform: scale(0.95);
    opacity: 0;
  }
  100% {
    transform: scale(1);
    opacity: 1;
  }
}

@media screen and (max-width: 480px) {
  .side-menu {
    display: flex;
    justify-content: flex-end;
    position: relative;
    width: 80px;
    height: 45px;
    cursor: pointer;

    .menu-icon {
      width: 40px;
      height: 45px;
      position: relative;
      cursor: pointer;
      z-index: 2;
      -webkit-touch-callout: none;
      position: absolute;
      opacity: 0;
    }
    .menu-grp {
      margin: auto;
      position: absolute;
      top: 0;
      right: 0;
      left: 0;
      bottom: 0;
      width: 25px;
      height: 13px;
      .menu-line {
        position: absolute;
        display: block;
        width: 25px;
        height: 3px;
        background: $component;
        background-color: $primary;
        border-radius: 1px;
        transition: all 0.2s cubic-bezier(0.1, 0.82, 0.76, 0.965);
        &:first-of-type {
          top: 0;
        }
        &:last-of-type {
          bottom: 0;
        }
      }
    }
    &.active,
    .menu-icon:checked + div {
      .menu-line {
        &:first-of-type {
          transform: rotate(45deg);
          top: 5px;
        }
        &:last-of-type {
          transform: rotate(-45deg);
          bottom: 5px;
        }
      }
    }
  }
  .blurred {
    filter: blur(4px);
  }
  html,
  body,
  .container {
    overflow: hidden;
    min-height: -webkit-fill-available;
  }
  header {
    height: 110px;
  }
  select {
    font-size: 11px;
  }
  input[type='date'] {
    font-size: 11px;
  }
  .cards .content .f-wrapper .task-form #task,
  select#projects,
  input[type='date'] {
    height: 32px;
    font-size: 12px;
  }
  .section-header {
    font-size: 18px;
  }
  .form-header,
  .form-title-header {
    font-size: 16px;
  }

  .cards {
    .sidebar {
      .filter,
      .project {
        font-size: 13px;
      }
      .projects-header {
        overflow-x: hidden;
      }
      .project {
        .project-name {
          font-size: 13px;
          width: 140px;
        }
      }
    }
    .content {
      .f-wrapper {
        .task-form {
          .form-header {
            margin-top: 14px;
            margin-bottom: 10px;
          }
          .fa-star {
            margin-top: 50px;
          }
          #note {
            height: 20vh;
            font-size: 12px;
          }
          .extras-wrapper {
            margin-bottom: 20px;
          }
          .fa-regular {
            font-size: 24px;
          }
        }
        .expand-view {
          .expand-header {
            margin-bottom: 8px;
            .project-grp p {
              font-size: 14px;
              margin-top: 1px;
            }
            .project-grp i {
              font-size: 18px;
            }
          }
        }
      }
      .t-wrapper {
        .task {
          .task-title {
            font-size: 11px;
          }
        }

        .no-tasks {
          font-size: 16px;
        }
      }
      .o-wrapper {
        .expand-view {
          #open-title {
            width: 215px;
            font-size: 16px;
            margin-top: 4px;
          }
          #open-note {
            font-size: 14px;
            height: 40vh;
          }
        }
      }
    }
    .sidebar,
    .content {
      height: 70vh;
      min-height: -webkit-fill-available;
    }
    .mobile-stretch {
      transition: 0s;
      margin-top: 5vh;
      min-height: -webkit-fill-available;
      height: 50vh;
    }
    .sidebar {
      display: none;
    }
  }
  .header {
    opacity: 0;
    height: 0;
  }
  .filtersHide {
    display: none;
  }
}

